# csv-etl

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
data/config/: destinations.json  mappings.json  sources.json
src/converter/: __init__.py  cli.py  pipeline.py
src/converter/extractors/: __init__.py  base.py  revolut_crypto.py  revolut_stocks.py
src/converter/loaders/: __init__.py  base.py  csv_loader.py
src/converter/models/: __init__.py  ghostfolio.py  revolut_crypto.py  revolut_stocks.py
src/converter/transformers/: __init__.py  base.py  dynamic.py  revolut_crypto.py  revolut_stocks.py
src/converter_dashboard/: Dockerfile  __init__.py  app.py  models.py  run.py
src/converter_dashboard/templates/: base.html  index.html  preview.html
src/converter_dashboard/templates/mappings/: edit.html  list.html  visual.html
src/converter_dashboard/templates/specs/: edit.html  list.html
